feat(backend): online status websocket (#27)
* feat: dependency init

* feat: test socket

* feat: renamed api to http, simple unsecure set status listener

* feat: springwolf integration

* docs: actually documented rest api endpoint exceptions

* ref: socket jwt interception and user status web test

* ref: UserRepository impl spec clarification

* feat: SessionDao for session updates

* fix: login and register code inconsistency

* ref: token constant consistency

* feat: redis container

* ref: PresenceDao, redis executePipelined

* post testcontainers attempt

* feat: embedded redis for tests

* ref: readded deprecated redis testcontainer config

* feat: springwolf docs init

* ref: presence socket docs

* ref: spotlessApply

* test: streamlined websocket config, presence observer feature test